--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,50 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: ci-test
+name: CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main, develop]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
+
+env:
+  GO_VERSION: "1.21"
+  DB_URL: "postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable"
 
 jobs:
-
   test:
+    name: Test
     runs-on: ubuntu-latest
+
+    # Service containers untuk PostgreSQL
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_PASSWORD: secret
+          POSTGRES_USER: root
+          POSTGRES_DB: simple_bank
+        ports:
+          - 5432:5432
+        # Set health checks untuk wait sampai postgres ready
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.25.1"
 
-    - name: Test
-      run: make test
+      - name: Run migrations
+        run: make migrateup
+
+      - name: Generate code and run tests
+        run: make test
+
+  
