--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,14 @@ jobs:
         with:
           go-version: "1.25.1"
 
+      - name: Install golang-migrate
+        run: |
+          # Install migrate tool
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/local/bin/
+          # Install make if not available
+          sudo apt-get update && sudo apt-get install -y make
+
       - name: Run migrations
         run: make migrateup
 
